AWS/vpc_peering_task/4.2_sec_group_db.tf
resource "aws_security_group" "allow_tls_TASK4_db" {
  name        = "allow_tls2_db"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.task4_vpc.id}"

  ingress {
    description = "TLS from VPC" #inbound rule MY  MYSQL/AUROR
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "TLS from VPC" #inbound rule SSH
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0             #outbond rule
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${var.tags}"
}
